DB added to gitignore. Link on Readme

--- a/07-APS_02.md
+++ b/07-APS_02.md
@@ -102,3 +102,10 @@ A auto-avaliação será avaliada da seguinte forma:
 | A       | Entregue, e argumentado corretamente                                                                                                                                                         | "Nota A porque a passagem `de acordo com Fulano et al.` mostra que os resultados obtidos condizem com a literatura", ou "Nota B, porque a figura tem todos os elementos, embora não tenha nenhuma indicação de uma leitura crítica do contexto. |
 
 Para atingir cada nível, é necessário cumprir todos os requisitos do nível anterior. Cada uma das entregas será avaliada individualmente e isoladamente. A nota geral do trabalho será a menor entre as notas das entregas.
+
+
+
+
+
+#######################
+Link DB: https://github.com/tiagoft/NLP/blob/main/Aulas/datasets/IMDB%20Dataset.csv
